# WAVE

./: .gitignore  AGENTS.md  DOMAIN_SPEC.md  HANDOFF.md  PRD.md  README.md  cheapest-small-gpu-pricing.json  cloud-gpu-pricing.json  gemma-finetune-format.json  gemma-lora-runtime-swapping.json  gemma-lora-runtime-swapping.md  llm-eval-metrics-authoritative.json  llm-eval-metrics.json  runpod-lambda-pricing.json  skills-lock.json  submission_requirements.md  unsloth-gemma-4-finetuning.json  unsloth-gemma-4-finetuning.md  unsloth-gemma4-config-search.json  unsloth-lora-hparams-search.json
models/: 01_gemma4_smoke_test.ipynb  MLC_BUILD_POSTMORTEM.md  ONNX_EXPORT_POSTMORTEM.md  README.md  SYNTHETIC_DATA.md  SYNTHETIC_DATASET_GENERATION.md  environment.yml  export_gguf.py  export_text_onnx.py  generate_phase_narration_synthetic.py  generate_wave_session_synthetic.py  merge_lora_adapter.py  prepare_wave_session_dataset.py  pyproject.toml  regen_phase_failures.py  setup.md  sync_env.py  train_phase_narration_lora.py  train_wave_session_lora.py
models/contest-results/phase-narration-lora/: README.md  results-summary.json
models/datasets/: HF_README.md  lora-check-in-1-clinician.jsonl  lora-check-in-2-clinician (1).jsonl  lora-check-in-3-clinician (1).jsonl  lora-check-in-5-clinician.jsonl  lora-wave-session-expanded-eda.json  lora-wave-session-expanded-eda.md
models/datasets/clinician-seeds/: README.md  lora-check-in-4-clinician.jsonl
models/datasets/human/: lora-phase-narration-clinician.jsonl  lora-phase-narration-expanded.jsonl  lora-reflection-clinician.jsonl
models/datasets/reports/: lora-wave-session-coverage-plan.json  lora-wave-session-expanded-eda.json  lora-wave-session-expanded-eda.md
models/datasets/synthetic/: lora-phase-narration-synthetic-draft.jsonl  lora-wave-session-synthetic-quality-audit.md  lora-wave-session-synthetic-report.json
models/finetune/: README.md  SYNTHETIC_DATA.md  SYNTHETIC_DATASET_GENERATION.md  analyze_wave_session_dataset.py  diagnose_merged_base.py  generate_phase_narration_synthetic.py  merge_lora_peft.py  multi_prompt_test.py  run_generation_eval_from_adapter.py  run_generation_eval_phase_only.py
models/gguf/: README.md  bench_wave_prompts.py
models/mlc/: README.md
models/mlc/mac/: .gitkeep
models/onnx/: README.md  cast_fp16.py  cast_rmsnorm_fp32.py  export.py  finish_export.py  restage_decoder.py  try_fuse_decoder.py  try_fuse_decoder_v2.py
models/successful_runs/: COMPARISON.md
models/successful_runs/local_final/: README.md  REPORT.md  eval.json  generation-sanity-retry.json  run-config.json  (+4 more)
(+325 files in other folders)
