[project]
name = "wave-models"
version = "0.0.0"
description = "Ad-hoc Gemma 4 smoke tests and LoRA experiments for WAVE. Not shipped to users."
requires-python = "==3.11.*"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "accelerate>=1.0.0",
    "huggingface_hub>=0.26.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "datasets>=4.8.5",
    "peft>=0.19.1",
    "trl>=1.3.0",
    "bitsandbytes>=0.49.2",
]

[tool.uv]
package = false

# PyTorch wheels: pull the CUDA 12.8 build from the official PyTorch index on
# Windows + Linux (works on RTX 50-series / Blackwell which need sm_120 kernels
# only present in cu128+). macOS falls through to the default PyPI wheel, which
# includes MPS support. Anyone on Windows/Linux without an NVIDIA GPU can still
# use the cu128 wheel — torch on CPU works the same, the wheel is just larger.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
