[project]
name = "wave-models"
version = "0.0.0"
description = "Ad-hoc Gemma 4 smoke tests and LoRA experiments for WAVE. Not shipped to users."
requires-python = "==3.11.*"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "accelerate>=1.0.0",
    "huggingface_hub>=0.26.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "datasets>=3.4.1,<4.0",
    "peft>=0.19.1",
    "trl>0.19.0,<=0.24.0",
    "bitsandbytes>=0.49.2",
    "unsloth>=2025.7.2",
    "unsloth-zoo>=2025.7.4",
    "torchvision==0.25.*",
    "triton-windows>=3.6.0.post26",
]

[tool.uv]
package = false

# PyTorch wheels: pull the CUDA 12.8 build from the official PyTorch index on
# Windows + Linux (works on RTX 50-series / Blackwell which need sm_120 kernels
# only present in cu128+). macOS falls through to the default PyPI wheel, which
# includes MPS support. Anyone on Windows/Linux without an NVIDIA GPU can still
# use the cu128 wheel — torch on CPU works the same, the wheel is just larger.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
unsloth-zoo = { git = "https://github.com/unslothai/unsloth-zoo.git" }
